--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <title>Prova esame Foppiano Paolo</title>
 </head>
 <body>
-    
-    <h1>European countries</h1>
+    <header class="header">
+        <div>European countries</div>
+    </header>
+    <button class="sorting-button" onclick="sortByName()">Alphabetic</button>
+    <button class="sorting-button" onclick="sortByPopM()">Order by population Min to Max</button>
+    <button class="sorting-button" onclick="sortByPopL()">Order by population Max to Min</button>
     <div id="container">
 
     </div>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 <script src="./app.js"></script>
 </html>
