--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <button class="sorting-button" onclick="sortByPopM()">Order by population Min to Max</button>
     <button class="sorting-button" onclick="sortByPopL()">Order by population Max to Min</button>
     <div id="container">
-
     </div>
 
     <footer class="footer">
-
+        <div class="copyright">Copyright ( © ) Paolo Foppiano</div>
+        <div class="europe flag"><img src="./assets/Flag_of_Europe.svg.png" alt=""></div>
+        <div class="api"><a href="https://restcountries.com/"> based on api by rest countries https://restcountries.com/</a></div>
     </footer>
 </body>
 <script src="./app.js"></script>
